--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
                 <li>Lesson 01: <a href="lesson1/">Design Principles</a></li> 
                 <li>Lesson 02: <a href="lesson2/">Website Planning Assignment</a></li>
                 <li>Lesson 03: <a href="chamber2/index.html">Chamber Homepage</a></li>
-                <!--<li>Lesson 04: <a href="#weather2/preston.html">Chamber Homepage: PT 2</a></li>
-                <li>Lesson 05: <a href="#gallery/gallery-7.html">Gallery</a></li>
-                <li>Lesson 06: <a href="#stormcenter/stormcenter.html">Business Directory</a></li>
+                <li>Lesson 04: <a href="bom/bom.html">B.O.M Top 25</a></li>
+                <li>Lesson 05: <a href="chamber3/index.html">Chamber Homepage Continued</a></li>
+                <!--<li>Lesson 06: <a href="#stormcenter/stormcenter.html">Business Directory</a></li>
                 <li>Lesson 07: <a href="#lesson-5/index.html">Week 5</a></li>
                 <li>Lesson 09: <a href="#lesson-10/preston.html">Weather Site API</a></li>
                 <li>Lesson 10: <a href="#lesson-11/index.html">Weather Site Complete</a></li>
