--- a/chamber3/index.html
+++ b/chamber3/index.html
@@ -64,10 +64,11 @@
         </div>
         <div class="weather">
             <h3>Tri-Cities Weather</h3>
-            <h3 id="tempreature">°C</h3>
+            <h3 id="temp">°C</h3>
             <h4 id="description-temperature">Description</h4>
             <hr>
-            <p id="wind-speed">Wind Speed</p>
+            <p id="speed">Wind Speed</p>
+            <p id="windchill">Wind Chill</p>
         </div>
         <div class="news">
             <span id="news-date"><b>May 18, 2023</b></span>
