--- a/chamber4/index.html
+++ b/chamber4/index.html
@@ -59,20 +59,20 @@
                 <source media="(max-width: 1024px)" srcset="images/wdd230-org-large.webp">
                 <img src="images/wdd230-org-large.webp" alt="Lesson 06">
             </picture>
-            
-        <div class="event">
+            <button class="call-to-action">Join Us!</button>
+        </div>
+            <div class="event">
             <h3>Brigham Young University Singers in Concert Tour</h3>
             <p>Wedensday, May 3, 2023 7PM Kennewick High School, Kennewick, Washington</p>
             <b>Free</b>
-           
-        </div>
+            </div>
         <div class="weather">
             <h3>Tri-Cities Weather</h3>
-            <h3 id="tempreature">°C</h3>
+            <h3 id="temp">°C</h3>
             <h4 id="description-temperature">Description</h4>
             <hr>
-            <p id="wind-speed">Wind Speed</p>
-            <p>Wind Chill: <span id="windchill"></span></p>
+            <p id="speed">Wind Speed</p>
+            <p id="windchill">Wind Chill</p>
         </div>
         <div class="news">
             <span id="news-date"><b>May 18, 2023</b></span>
