--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
                 <li>Lesson 04: <a href="bom/bom.html">B.O.M Top 25</a></li>
                 <li>Lesson 05: <a href="chamber3/index.html">Chamber Homepage Continued</a></li>
                 <li>Lesson 06: <a href="chamber4/index.html">Chamber Homepage Responsive</a></li>
-                <li>Lesson 07: <a href="lesson-7/discover.html">Discover Page - Image section</a></li>
+                <li>Lesson 07a: <a href="lesson7a/lazy.html">Progressive Images</a></li>
+                <li>Lesson 07b: <a href="lesson7/discover.html">Discover Page - Image section</a></li>
                 <!--<li>Lesson 09: <a href="#lesson-10/preston.html">Weather Site API</a></li>
                 <li>Lesson 10: <a href="#lesson-11/index.html">Weather Site Complete</a></li>
                 <li>Lesson 11: <a href="#">Title</a></li>
