--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
                 <li>Lesson 06: <a href="chamber4/index.html">Chamber Homepage Responsive</a></li>
                 <li>Lesson 07a: <a href="lesson7a/lazy.html">Progressive Images</a></li>
                 <li>Lesson 07b: <a href="lesson7/discover.html">Discover Page - Image section</a></li>
-                <!--<li>Lesson 09: <a href="#lesson-10/preston.html">Weather Site API</a></li>
-                <li>Lesson 10: <a href="#lesson-11/index.html">Weather Site Complete</a></li>
-                <li>Lesson 11: <a href="#">Title</a></li>
+                <li>Lesson 08a: <a href="lesson8a/tablebuild.html">Table Build</a></li>
+                <li>Lesson 08b: <a href="lesson8b/formbuild.html"></a>Form Build</li>
+                <!--<li>Lesson 11: <a href="#">Title</a></li>
                 <li>Lesson 12: <a href="#">Title</a></li>-->
             </ul>
         </main>
