--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <li>Lesson 07a: <a href="lesson7a/lazy.html">Progressive Images</a></li>
                 <li>Lesson 07b: <a href="lesson7/discover.html">Discover Page - Image section</a></li>
                 <li>Lesson 08a: <a href="lesson8a/tablebuild.html">Table Build</a></li>
-                <li>Lesson 08b: <a href="lesson8b/formbuild.html"></a>Form Build</li>
+                <li>Lesson 08b: <a href="lesson8b/formbuild.html">Form Build</a></li>
                 <!--<li>Lesson 11: <a href="#">Title</a></li>
                 <li>Lesson 12: <a href="#">Title</a></li>-->
             </ul>
