--- a/lesson7/discover.html
+++ b/lesson7/discover.html
@@ -33,8 +33,8 @@
         <div class="menu">
             <nav>
                 <ul id="primaryNav">
-                    <li><a href="/chamber4/index.html">Home</a></li>
-                    <li class="active"><a href="/lesson7/discover.html">Discover</a></li>
+                    <li><a href="/wdd230/chamber4/index.html">Home</a></li>
+                    <li class="active"><a href="/wdd230/lesson7/discover.html">Discover</a></li>
                     <li><a href="#">Join</a></li>
                     <li><a href="#">Contact</a></li> 
                 </ul>
@@ -87,7 +87,7 @@
                 
                 <br><b>City Size and Density</b><br>
                 Kennewick has a population of 83,921, Pasco 77,108, Richland 60,560 making up the 3 major cities of the Tri-Cities metro area. There are smalle communites in the area with populations less than 16,000 people. The total population of the metro area is estimated at 311,469 people. The density is 95 people per square mi<br><br><hr>
-                <br><b>Ottawa Parliament Tours</b>
+                <br><b>REACH Museum</b>
                 
                 <br>Visit the REACH Museum on the banks of the Columbia River. 
                 From the Ice Age floods to the Atomic Age, there is so much cultural and historical importance and impact that shaped our past, establishes our present, and will guide our future here in the Mid Columbia Basin region.
