--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <li>Lesson 07b: <a href="lesson7/discover.html">Discover Page - Image section</a></li>
                 <li>Lesson 08a: <a href="lesson8a/tablebuild.html">Table Build</a></li>
                 <li>Lesson 08b: <a href="lesson8b/index.html">Form Build</a></li>
-                <!--<li>Lesson 11: <a href="#">Title</a></li>
+                <li>Lesson 08c: <a href="join/join.html">Join Page</a></li>
                 <li>Lesson 12: <a href="#">Title</a></li>-->
             </ul>
         </main>
