--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -34,8 +34,8 @@
             <nav>
                 <ul id="primaryNav">
                     <li><a href="index.html">Home</a></li>
-                    <li class="active"><a href="#/discover.html">Discover</a></li>
-                    <li><a href="#/join.html">Join</a></li>
+                    <li class="active"><a href="discover.html">Discover</a></li>
+                    <li><a href="join.html">Join</a></li>
                     <li><a href="#">Contact</a></li> 
                 </ul>
             </nav>
