--- a/chamber/index.html
+++ b/chamber/index.html
@@ -42,7 +42,7 @@
                     <li><a href="discover.html">Discover</a></li>
                     <li><a href="join.html">Join</a></li>
                     <li><a href="directory.html">Directory</a></li> 
-                    <li><a href="#">Contact</a></li>
+                    <li><a href="contact.html">Contact</a></li>
                     
                 </ul>
             </nav>
@@ -56,9 +56,9 @@
     <main class="main">
         <div class="hero">
             <picture class="optipic">
-                <source media="(max-width: 600px)" srcset="images/wdd230-org-small.webp">
-                <source media="(max-width: 768px)" srcset="images/wdd230-org-medium.webp">
-                <source media="(max-width: 1024px)" srcset="images/wdd230-org-large.webp">
+                <source media="(max-width: 600px)" srcset="images/bridge-small.webp">
+                <source media="(max-width: 768px)" srcset="images/bridge-medium.webp">
+                <source media="(max-width: 1024px)" srcset="images/bridge-large.webp">
                 <img src="images/wdd230-org-large.webp" alt="Lesson 06">
             </picture>
             <button class="call-to-action">Join Us!</button>
@@ -69,16 +69,20 @@
             <b>Free</b>
             </div>
         <div class="weather">
-            <div class="weather-div">
+            <!-- <div class="weather-div">
                 <picture>
                    <img src="images/cloud_day_forecast.webp" alt="Weather-icon">
                </picture>
                <h3 id="temp"><span id="temperature">9</span>°C</h3>
-               </div>
-               <h4 id="desc-temp">Partly Cloudy</h4>
-               <hr>
-               <p>Wind Speed: <span id="speed">16</span>km/h</p>
-               <p>Wind Chill: <span id="windchill">N/A</span></p>
+            </div>
+            <h4 id="desc-temp">Partly Cloudy</h4>
+            <hr>
+            <p>Wind Speed: <span id="speed">16</span>km/h</p>
+            <p>Wind Chill: <span id="windchill">N/A</span></p> -->
+               <a class="weatherwidget-io" href="https://forecast7.com/en/46d21n119d16/99336/" data-label_1="KENNEWICK" data-label_2="WEATHER" data-mode="Current" data-days="3" data-theme="original" >KENNEWICK WEATHER</a>
+                <script>
+                !function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src='https://weatherwidget.io/js/widget.min.js';fjs.parentNode.insertBefore(js,fjs);}}(document,'script','weatherwidget-io-js');
+                </script>
            </div>
         <div class="news">
             <span id="news-date"><b>May 18, 2023</b></span>
