--- a/chamber/thanks.html
+++ b/chamber/thanks.html
@@ -40,7 +40,7 @@
             <li><a href="#">About</a></li>
             <li class="active"><a href="#">Propose</a></li>
             <li><a href="#">Winners</a></li>
-            <li><a href="#">Contact</a></li>    
+            <li><a href="contact.html">Contact</a></li>    
         </ul>
     </nav>
     
