--- a/chamber/index.html
+++ b/chamber/index.html
@@ -59,7 +59,7 @@
                 <source media="(max-width: 600px)" srcset="images/bridge-small.webp">
                 <source media="(max-width: 768px)" srcset="images/bridge-medium.webp">
                 <source media="(max-width: 1024px)" srcset="images/bridge-large.webp">
-                <img src="images/wdd230-org-large.webp" alt="Lesson 06">
+                <img src="images/bridge.webp" alt="bridge">
             </picture>
             <button class="call-to-action">Join Us!</button>
         </div>
